# rust-discord-gateway

./: .gitignore  Cargo.toml  README.md  bro_im_dead.json  script.py  task.md
src/: discord_gateway.rs  main.rs  ws.rs
