[package]
name = "d-ga-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.4"
